--- a/virtual-keyboard/source/css/styles.scss
+++ b/virtual-keyboard/source/css/styles.scss
@@ -12,6 +12,7 @@ html {
 body {
   font-size: 2rem;
   font-weight: bold;
+  margin: 0;
 }
 
 .wrapper {
@@ -49,6 +50,7 @@ body {
   font-size: 1.5rem;
   position: relative;
   text-align: left;
+  cursor: pointer;
 
   &_active {
     background-color: #15c8f5;
@@ -88,6 +90,7 @@ body {
 }
 
 .btn__inner {
+  width: 100%;
   text-align: center;
   font-size: 2rem;
   position: absolute;
@@ -120,4 +123,26 @@ body {
 .btn__inner_right {
   border-width: 6px 0 6px 15px;
   border-color: transparent transparent transparent #fff;
+}
+
+.footer {
+  max-width: 1000px;
+  margin: auto;
+  text-align: center;
+}
+
+.footer__btn {
+  width: 50px;
+  height: 50px;
+  font-weight: bold;
+  transition: 0.5s;
+  border: none;
+  border-radius: 20px;
+  color: #fff;
+  background-color: #465451;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #293133;
+  }
 }
