--- a/virtual-keyboard/source/css/styles.scss
+++ b/virtual-keyboard/source/css/styles.scss
@@ -51,13 +51,15 @@ body {
   position: relative;
   text-align: left;
   cursor: pointer;
-
-  &_active {
-    background-color: #15c8f5;
-  }
+  transition: 0.2s;
 
   &_bordered {
     background-color: #293133;
+  }
+
+  &_active {
+    background-color: #15c8f5;
+    transform: scale(1.1);
   }
 }
 
@@ -81,7 +83,8 @@ body {
   flex-basis: 130px;
 }
 
-.btn_ctrl {
+.btn_lctrl,
+.btn_rctrl {
   flex-basis: 60px;
 }
 
@@ -90,7 +93,7 @@ body {
 }
 
 .btn__inner {
-  width: 100%;
+  width: 80%;
   text-align: center;
   font-size: 2rem;
   position: absolute;
